--- a/book-library-app/book-library-app/src/main/resources/templates/home.html
+++ b/book-library-app/book-library-app/src/main/resources/templates/home.html
@@ -12,9 +12,9 @@
         <nav>
             <ul>
                 <li><a th:href="@{/}"> Начало</a></li>
-                <li><a th:href="@{books}">Книги</a></li>
+                <li><a th:href="@{/books}">Книги</a></li>
                 <li><a th:href="@{/favourites}">Любими</a></li>
-                <li><a th:href="@{profile}">Профил</a></li>
+                <li><a th:href="@{/profile}">Профил</a></li>
             </ul>
         </nav>
     </div>
