--- a/book-library-app/book-library-app/src/main/resources/templates/login.html
+++ b/book-library-app/book-library-app/src/main/resources/templates/login.html
@@ -18,7 +18,12 @@
         <p style="color:green">Успешно излязохте от системата.</p>
     </div>
 
+
     <form th:action="@{/login}" method="post">
+
+        <input type="hidden"
+               th:name="${_csrf.parameterName}"
+               th:value="${_csrf.token}" />
 
         <div class="form-group">
             <label for="username">Потребителско име</label>
