fix: correct missing slashes in Thymeleaf links

--- a/book-library-app/book-library-app/src/main/resources/templates/index.html
+++ b/book-library-app/book-library-app/src/main/resources/templates/index.html
@@ -27,7 +27,7 @@
             Book Library е онлайн библиотека, където можете да разглеждате книги,
             да ги добавяте във ваши списъци и да откривате нови заглавия.
         </p>
-        <a th:href="@{books}" class="btn">Виж каталога</a>
+        <a th:href="@{/books}" class="btn">Виж каталога</a>
     </section>
 
     <section class="features">
