--- a/book-library-app/book-library-app/src/main/resources/templates/register.html
+++ b/book-library-app/book-library-app/src/main/resources/templates/register.html
@@ -40,7 +40,7 @@
         <button type="submit" class="btn">Регистрация</button>
     </form>
 
-    <p class="login-link">Вече имате акаунт? <a th:href="@{login}">Вход</a></p>
+    <p class="login-link">Вече имате акаунт? <a th:href="@{/login}">Вход</a></p>
 </div>
 </body>
 </html>
