feat: add about.html page

--- a/book-library-app/book-library-app/src/main/resources/templates/favourites.html
+++ b/book-library-app/book-library-app/src/main/resources/templates/favourites.html
@@ -15,6 +15,7 @@
         <a th:href="@{/books}">Книги</a>
         <a th:href="@{/favourites}" class="active">Любими</a>
         <a th:href="@{/login}">Профил</a>
+        <a th:href="@{/about}">За нас </a>
     </nav>
 </header>
 
