--- a/book-library-app/book-library-app/src/main/resources/templates/books.html
+++ b/book-library-app/book-library-app/src/main/resources/templates/books.html
@@ -14,6 +14,7 @@
     <a th:href="@{/books}" class="active">Книги</a>
     <a th:href="@{/favourites}">Любими</a>
     <a th:href="@{/login}">Профил</a>
+    <a th:href="@{/about}">За нас </a>
 
   </nav>
 </header>
