--- a/book-library-app/book-library-app/src/main/resources/templates/index.html
+++ b/book-library-app/book-library-app/src/main/resources/templates/index.html
@@ -15,6 +15,7 @@
                 <li><a th:href="@{/books}" class="active">Книги</a></li>
                 <li> <a th:href="@{/favourites}">Любими</a></li>
                 <li>  <a th:href="@{/profile}">Профил</a></li>
+                <li>   <a th:href="@{/about}">За нас </a></li>
             </ul>
         </nav>
     </div>
